Ajustes na Nomenclatura do Pacote

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@caffeine/post_post-type",
+  "name": "@caffeine-packages/post.post-type",
   "author": {
     "name": "Alan Reis",
     "email": "alanreisanjo@gmail.com",
