feat(presentation): update presentation layer routing, dependencies and tags
This commit introduces several important enhancements to the presentation layer
and its dependencies:

- Injects @caffeine/env to explicitly validate and provide JWT_SECRET,
  AUTH_EMAIL, and AUTH_PASSWORD at the application startup.
- Updates the main application router (PostTypeRoutes) to accept and
  propagate the jwtSecret down to the relevant controllers
  (CreatePostTypeController, UpdatePostTypeController, and
  DeletePostTypeController).
- Renames the route prefix from /post-type to /post-types and updates
  the Swagger tags to match the pluralized naming convention.
- Adds missing environment variable typing declarations in env.d.ts.
- Updates the UnpackedPostTypeDTO schema to include descriptions for
  better API documentation.
- Registers @caffeine/env dependency in package.json and bun.lockb.

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "@caffeine/presentation": "link:@caffeine/presentation",
         "@caffeine/redis-drive": "link:@caffeine/redis-drive",
         "@caffeine/schema": "link:@caffeine/schema",
+        "@caffeine/env": "link:@caffeine/env",
         "@caffeine/value-objects": "link:@caffeine/value-objects"
     }
 }
